--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tuupola/slim-jwt-auth",
+    "name": "smoshysmosh/slim-jwt-auth",
     "description": "PSR-7 JWT Authentication Middleware",
     "keywords": [
         "psr-7",
@@ -8,7 +8,7 @@
         "json",
         "auth"
     ],
-    "homepage": "https://github.com/tuupola/slim-jwt-auth",
+    "homepage": "https://github.com/smoshysmosh/slim-jwt-auth",
     "license": "MIT",
     "authors": [
         {
